--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 }
             }
         </script>
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="https://vajraadityavijay.github.io/Number_Info/styles.css">
     </head>
     <body>
         <form action="#" onsubmit="find()">
