--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 //odd or even
                 var input = document.getElementById("input").value;
                 if(input % 2 === 0 && input !== ""){
-                    document.getElementById("output2").innerHTML = "<b>" + input + "</b>" + " is a even number";
+                    document.getElementById("output2").innerHTML = "<b>" + input + "</b>" + " is an even number";
                 } else if(input % 2 === 1 && input !== "") {
                     document.getElementById("output2").innerHTML = "<b>" + input + "</b>" + " is a odd number";
                 } else {
