--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
                 }
             }
         </script>
-        <link rel="stylesheet" href="https://vajraadityavijay.github.io/Number_Info/styles.css">
+        <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
+        <h1 class="header">Please input a number</h1>
         <form action="#" onsubmit="find()">
             <input type="number" placeholder="Input number" id="input" class="input" autofocus>
             <input type="submit" class="submit">
