--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Number Info</title>
         <script>
-            window.location.replace ("https://vajraadityavijay.github.io/Number_Info/?#")
+            //window.location.replace ("https://vajraadityavijay.github.io/Number_Info/?#")
             var prime_numbers = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97];
             function find(){
                 //prime number
@@ -59,7 +59,7 @@
                 }
             }
         </script>
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="https://vajraadityavijay.github.io/Number_Info/styles.css">
     </head>
     <body>
         <h1 class="header">Please input a number</h1>
